--- a/style.css
+++ b/style.css
@@ -25,3 +25,15 @@ border-radius: 28px;
  color:black;
  transform: scale(1.3);
 }
+
+.frontal-bar{
+background-color: bisque;
+}
+
+.middle-bar{
+background-color:rgb(222, 204, 180);
+}
+
+.bottom-bar{
+background-color: aquamarine; 
+}
