--- a/style.css
+++ b/style.css
@@ -32,6 +32,21 @@ border-radius: 28px;
 .frontal-bar{
 background-color: bisque;
 }
+.search-bar{
+    position:absolute;
+    top:50%;
+    left:50%;
+    color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  border-color:aliceblue;
+  cursor: pointer;
+  border-radius: 15px;
+}
+.search-bar:hover {
+ background-color: black;
+}
 
 .middle-bar{
 background-color:rgb(222, 204, 180);
