--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ background-color: bisque;
 .search-bar{
     position:absolute;
     top:50%;
-    left:50%;
+    left:42%;
     color: white;
   font-size: 16px;
   padding: 12px 24px;
@@ -46,6 +46,11 @@ background-color: bisque;
 }
 .search-bar:hover {
  background-color: black;
+}
+.btn{
+    position:absolute;
+    top:50;
+    left:49%;
 }
 
 .middle-bar{
