--- a/style.css
+++ b/style.css
@@ -18,13 +18,6 @@ nav{
     transition: 0.2s;
     float:left;
 }
-.center{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-}
-
 .navi-bar a:hover {
 border-radius: 28px;
  background-color:#b7bb5b;
@@ -41,15 +34,62 @@ background-color: bisque;
     left:35%;
     color:rgb(175, 190, 196);
     font-size: 33px;
+    font-family: Arial, Helvetica, sans-serif;
 }
-.search{
-float: none;
+.center{
+    z-index: -1;
     display: block;
-    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
-    margin: 0;
-    padding: 14px;
 }
+
+
+.search-container {
+    margin: 20px;
+    position:absolute;
+    top:50%;
+    left:42%;
+   }
+   
+   .search-container form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+   }
+   
+   .search-container input[type="text"] {
+    flex: 1;
+    padding: 12px 24px;
+    border: 1px;
+    border-color:aliceblue;
+    border-radius: 12px;
+    outline: none;
+    opacity: 40%;
+   }
+   .search-container input[type="text"]:hover {
+    background-color: white;
+    opacity: 80%;
+}
+   
+   .search-container button {
+    padding: 12px 24px;
+    margin-left: 0px;
+    background: #ddd;
+    border: none;
+    border-color:aliceblue;
+    cursor: pointer;
+    font-size: medium;
+    border-radius: 12px;
+    opacity: 40%;
+   }
+   
+   .search-container button:hover {
+    background:white;
+    opacity: 80%;
+   }
+
+
 /*
 .search-bar{
     position:absolute;
@@ -63,7 +103,6 @@ float: none;
   cursor: pointer;
   border-radius: 15px;
   opacity: 40%;
-  
 }
 .search-icon{
     
