--- a/style.css
+++ b/style.css
@@ -130,4 +130,4 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     border: 1px solid;
     width:15px;
     font-size: xx-large;
-}
+}html
